[gd_scene load_steps=11 format=3 uid="uid://d3fpypedn3irp"]

[ext_resource type="Script" path="res://UI/game_ui.gd" id="1_dcuoc"]
[ext_resource type="Texture2D" uid="uid://dwd3v4gfacawk" path="res://addons/Tiny Swords/Factions/Knights/Troops/Dead/Dead.png" id="3_xvp84"]

[sub_resource type="SystemFont" id="SystemFont_eboec"]
font_names = PackedStringArray("Comic Sans MS")
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_hg7oe"]
font = SubResource("SystemFont_eboec")
font_size = 85
outline_size = 13
outline_color = Color(0, 0, 0, 1)

[sub_resource type="SystemFont" id="SystemFont_ph7yv"]
font_names = PackedStringArray("Comic Sans MS")
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_h17bb"]
font = SubResource("SystemFont_ph7yv")
font_size = 45
outline_size = 9
outline_color = Color(0, 0, 0, 1)

[sub_resource type="SystemFont" id="SystemFont_wlsfi"]
font_names = PackedStringArray("Comic Sans MS")
font_weight = 100
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_yy58m"]
font = SubResource("SystemFont_wlsfi")
font_size = 45
font_color = Color(0.835294, 0.709804, 0.513726, 1)
outline_size = 12
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2eakd"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d4u8x"]
bg_color = Color(0.713726, 0.909804, 0, 1)

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_dcuoc")

[node name="TimerLabel" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -512.0
offset_top = 5.0
offset_right = 512.0
offset_bottom = 160.0
grow_horizontal = 2
text = "00:00
"
label_settings = SubResource("LabelSettings_hg7oe")
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = -6.0
offset_top = 23.0
offset_right = 1032.0
offset_bottom = 51.0
color = Color(0, 0, 0, 1)

[node name="LevelLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 6.0
offset_top = 20.0
offset_right = 199.0
offset_bottom = 119.0
text = "Level: 1"
label_settings = SubResource("LabelSettings_h17bb")
horizontal_alignment = 1

[node name="Dead" type="Sprite2D" parent="."]
position = Vector2(975, 38)
scale = Vector2(1.2, 1.2)
texture = ExtResource("3_xvp84")
hframes = 7
vframes = 2
frame = 6

[node name="KillsLabel" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 337.0
offset_top = -495.0
offset_right = 427.0
offset_bottom = -297.0
grow_horizontal = 2
grow_vertical = 2
text = "
50 

"
label_settings = SubResource("LabelSettings_yy58m")
horizontal_alignment = 2
vertical_alignment = 1

[node name="ExperienceBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 26.0
grow_horizontal = 2
theme_override_styles/background = SubResource("StyleBoxFlat_2eakd")
theme_override_styles/fill = SubResource("StyleBoxFlat_d4u8x")
value = 30.0
show_percentage = false
